@@ -46,7 +46,7 @@ if (!$gallery->user->canWriteToAlbum($gallery->album)) {
 
 <?php
 /* Read the album list */
-$albumDB = new AlbumDB();
+$albumDB = new AlbumDB(FALSE);
 
 if ($newName) {
 	$newName = str_replace("'", "", $newName);
